# my-toml-parser

./: CMakeLists.txt  example.toml  readme.md
example/: example.cpp
include/: error.h  parser.h  toml.h  toml_types.h
src/: error.cpp  main.cpp  parser.cpp
test/: test.h  testNextBlock.cpp  testParseArray.cpp  testParseDoc.cpp  testParseMap.cpp  testParseString.cpp  testRegex.cpp  testStdAny.cpp
